--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow|Cookie&display=swap" rel="stylesheet">
     <style>
@@ -14,6 +14,8 @@
           font-family: 'Archivo Narrow', sans-serif;
           background-image: url('winterlandschap.jpeg');
           background-size: cover;
+          overflow: hidden; /* Voorkomt scrollbars door sneeuwvlokken */
+          position: relative; /* Zorgt ervoor dat de sneeuw blijft liggen binnen het document */
         }
 
         h1 {
@@ -29,6 +31,7 @@
           position: relative;
           height: 300px;
           cursor: pointer;
+          z-index: 1; /* Zorg ervoor dat de sneeuwvlokken onder de kaart worden weergegeven */
         }
 
         .front, .back, .page {
@@ -51,7 +54,6 @@
         .page {
           background: url('winter.jpeg') no-repeat center darkred;
           background-size: cover;
-
         }
 
         .back {
@@ -84,10 +86,64 @@
           color: white; /* Kleur van de tekst in het bericht wit maken */
           text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8); /* Schaduw toevoegen aan de tekst in het bericht */
         }
+
+        /* Sneeuwvlokken animatie */
+        .snowflakes {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          pointer-events: none; /* Zorgt ervoor dat de sneeuwvlokken geen invloed hebben op interacties met de pagina */
+          z-index: 0; /* Onder de kaart en de inhoud van de kaart plaatsen */
+        }
+
+        .snowflake {
+          position: absolute;
+          width: 5px;
+          height: 5px;
+          background: white;
+          border-radius: 50%;
+          animation: snowfall linear infinite;
+        }
+
+        @keyframes snowfall {
+          to {
+            transform: translateY(100vh);
+          }
+        }
+
+        /* Stapel sneeuw */
+        .snowpile {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 20px; /* Pas deze waarde aan om de hoogte van de sneeuwstapel te veranderen */
+          background-color: white;
+          z-index: 2; /* Bovenop sneeuwvlokken en andere elementen plaatsen */
+        }
     </style>
 </head>
 
 <body>
+<div class="snowflakes">
+    <!-- Voeg hier sneeuwvlokken toe -->
+    <div class="snowflake" style="left: 10%; top: 5%; animation-duration: 10s;"></div>
+    <div class="snowflake" style="left: 20%; top: 10%; animation-duration: 8s;"></div>
+    <div class="snowflake" style="left: 30%; top: 15%; animation-duration: 12s;"></div>
+    <div class="snowflake" style="left: 40%; top: 20%; animation-duration: 15s;"></div>
+    <div class="snowflake" style="left: 50%; top: 25%; animation-duration: 9s;"></div>
+    <div class="snowflake" style="left: 60%; top: 30%; animation-duration: 11s;"></div>
+    <div class="snowflake" style="left: 70%; top: 35%; animation-duration: 14s;"></div>
+    <div class="snowflake" style="left: 80%; top: 40%; animation-duration: 10s;"></div>
+    <div class="snowflake" style="left: 90%; top: 45%; animation-duration: 13s;"></div>
+    <div class="snowflake" style="left: 15%; top: 50%; animation-duration: 12s;"></div>
+    <!-- Voeg meer sneeuwvlokken toe zoals hierboven -->
+</div>
+
+<div class="snowpile"></div>
+
 <div class="card">
     <div class="back">
         <div class="message">
